# numcompute-stream

./: README.md  gitignore  pyproject.toml  quickstart.ipynb
benchmark/: run_benchmarks.py
demo/: demo_stream.py
numcompute/: __init__.py  benchmarking.py  ensemble.py  io.py  metrics.py  optim.py  pipeline.py  preprocessing.py  rank.py  sort_search.py  stats.py  stream.py  test_stats.py  tree.py  utils.py  visualise.py
tests/: test_benchmarking.py  test_ensemble.py  test_io.py  test_metrics.py  test_optim.py  test_pipeline.py  test_preprocessing.py  test_rank.py  test_sort_search.py  test_stats.py  test_stream.py  test_tree.py  test_utils.py  test_visualise.py
