[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute-stream"
version = "0.2.0"
description = "NumPy-only streaming machine learning framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.setuptools.packages.find]
include = ["numcompute*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
